--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="row">
             <div class="col-3">
                 <i class="fi-xtsdxl-quote-solid"></i>
-                <p>"Musca Fashion Chic has revolutionized my fashion choices. Their commitment to sustainability
+                <p>"Musca CultureCraft has revolutionized my fashion choices. Their commitment to sustainability
                      and eco-chic practices is inspiring. Their stylish designs and durable products, especially
                       their reusable tote bags, have helped me reduce single-use plastic." - Sarah D.</p>
                       <div class="rating">
@@ -266,7 +266,7 @@
             </div>
             <div class="col-3">
                 <i class="fi-xtsdxl-quote-solid"></i>
-                <p>"Musca Fashion Chic is a game-changer in sustainable fashion. Their designs 
+                <p>"Musca CultureCraft is a game-changer in sustainable fashion. Their designs 
                     are not only trendy and stylish but also ethically made. I love how I can 
                     look good while feeling good about my choices. Highly recommend!" - Hiccup H.</p>
                       <div class="rating">
@@ -281,7 +281,7 @@
             </div>
             <div class="col-3">
                 <i class="fi-xtsdxl-quote-solid"></i>
-                <p>"Choosing Musca Fashion Chic was the best decision for my wardrobe 
+                <p>"Choosing Musca CultureCraft was the best decision for my wardrobe 
                     and the planet. Their eco-friendly approach to fashion is refreshing. 
                     The quality of their products is top-notch, and I love that I'm making 
                     a positive impact with every purchase. Love this brand!" - France S.</p>
