--- a/account.html
+++ b/account.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="navbar">
         <div class="logo">
-            <img src="assets/clogo-modified (3).png" width="125px">
+            <a href="index.html"><img src="assets/clogo-modified (3).png" width="125px"></a>
         </div>
         <nav>
             <ul id="MenuItems">
