--- a/product.html
+++ b/product.html
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="assets/logom.png" align="middle">
+                <img src="assets/clogo-modified (3).png" align="middle">
                 <p>Musca CultureCraft is a stylish and sustainable fashion destination
                      committed to innovation, partnerships, and long-term growth. 
                     They offer eco-conscious fashion options that prioritize
