--- a/product-details.html
+++ b/product-details.html
@@ -64,7 +64,7 @@
                     <option>Red</option>
                     <option>Beige</option>
                 </select>
-                <input type="number" value="1">
+                <input type="number" value="1" min="0">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fi-xtluxl-highlighter-thin"></i></h3>
                 <br>
