--- a/product.html
+++ b/product.html
@@ -177,7 +177,8 @@
                     <li>Blog Post</li>
                     <li>Return Policy</li>
                     <li>Coupons</li>
-                    <li>Join Affiliate</a></li>
+                    <li>Join Affiliate</li>
+                    <li><a href="jobportal.html" style="color:#bfd2c4">Become a Musca Babaylan</li></a>
                 </ul>
             </div>
             <div class="footer-col-4">
